# build_tool_leason

./: .gitignore  README.md
basel/lesson1/: bazel-bin  bazel-lesson1  bazel-out  bazel-testlogs
basel/lesson1/hello/: BUILD
basel/lesson2/: bazel-bin  bazel-lesson2  bazel-out  bazel-testlogs
basel/lesson2/bazel-bin/hello/_objs/wowza/: main.d
basel/lesson2/bazel-lesson1/hello/: main.cc
basel/lesson2/bazel-out/: stable-status.txt  volatile-status.txt
basel/lesson2/hello/: BUILD  hello.cc  hello.hh  main.cc
basel/lesson3/: bazel-bin  bazel-lesson3  bazel-out  bazel-testlogs
basel/lesson3/hello/: BUILD  hello.cc  hello.hh  hello_test.cc  main.cc
basel/lesson4/: graph.in
basel/test/hello/: BUILD  HelloConfig.hh  hello_test.cc  main.cc
cmake/lesson1/: CMakeLists.txt  main.cc
cmake/lesson2/: CMakeLists.txt  main.cc
cmake/lesson3/: CMakeLists.txt  main.cc
cmake/lesson4/: CMakeLists.txt  cat.hh  main.cc
cmake/lesson5/: CMakeLists.txt  QuickbitsConfig.hh  QuickbitsConfig.hh.in  cat.cc  main.cc
